--- a/xlog-crash/src/main/res/values/strings.xml
+++ b/xlog-crash/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+
+
     <string name="xlog_title_app_crash">应用程序错误</string>
     <string name="xlog_tip_crash_msg">很抱歉，应用程序出现错误，即将退出。 请选择邮件的方式将此错误报告提交给我，我会尽快修复这个问题，谢谢！</string>
     <string name="xlog_lab_submit_report">提交报告</string>
@@ -11,4 +13,31 @@
     <string name="xlog_email_send_success">邮件发送成功！</string>
     <string name="xlog_email_send_failed">邮件发送失败，验证失败！</string>
     <string name="xlog_no_application_support">当前设备无邮件应用，无法发送！</string>
+
+
+
+    <string name="xlog_crash_title">崩溃信息展示</string>
+    <string name="xlog_crash_copy_text">拷贝崩溃文本</string>
+    <string name="xlog_crash_share_text">分享崩溃文本</string>
+    <string name="xlog_crash_share_image">分享崩溃图片</string>
+    <string name="xlog_crash_send_email">发送崩溃邮件</string>
+    <string name="xlog_crash_crash_info">崩溃信息: </string>
+    <string name="xlog_crash_packet_name">包名: </string>
+    <string name="xlog_crash_class_name">类名: </string>
+    <string name="xlog_crash_method_name">方法: </string>
+    <string name="xlog_crash_line_number">行数: </string>
+    <string name="xlog_crash_exception_type">类型: </string>
+    <string name="xlog_crash_time">时间: </string>
+    <string name="xlog_crash_model">设备名称: </string>
+    <string name="xlog_crash_brand">设备厂商: </string>
+    <string name="xlog_crash_version">系统版本: </string>
+    <string name="xlog_crash_all_info">全部信息: </string>
+    <string name="xlog_crash_permission_sd">请授予SD卡权限才能继续进行分享</string>
+    <string name="xlog_crash_share">分享</string>
+    <string name="xlog_crash_no_sdcard">未插入sd卡</string>
+    <string name="xlog_crash_image_not_exist">图片文件不存在</string>
+    <string name="xlog_crash_share_to">分享到: </string>
+    <string name="xlog_crash_copied">拷贝成功</string>
+
+
 </resources>
